--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@gsap/react": "^2.1.1",
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.16.8",
+    "@sentry/react": "^8.23.0",
+    "@sentry/vite-plugin": "^2.21.1",
     "@vercel/speed-insights": "^1.0.12",
     "gsap": "^3.12.5",
     "react": "^18.3.1",
